--- a/gallery.html
+++ b/gallery.html
@@ -6,17 +6,22 @@
   <title>Gallery • YG-GEN</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body data-theme="dark">
+<body>
   <header class="nav big">
     <div class="brand">YG-GEN ♫</div>
-    <nav>
+    <nav class="topnav">
       <a href="index.html">Home</a>
       <a href="generator.html">Generator</a>
       <a href="gallery.html" class="active">Gallery</a>
       <a href="about.html">About</a>
     </nav>
-    <div class="right">
-      <button id="themeToggle" class="btn-ghost">🌙</button>
+
+    <div class="theme-controls">
+      <label for="themeChoiceGal">Theme</label>
+      <select id="themeChoiceGal">
+        <option value="yg">YG Official</option>
+        <option value="cute">Cute Fan</option>
+      </select>
     </div>
   </header>
 
